--- a/holo/index.html
+++ b/holo/index.html
@@ -2,41 +2,41 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
-    <!--meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"-->
-    <meta name="viewport"
-        content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-    <meta name="mobile-web-app-capable" content="yes">
-    <title>HOLO</title>
-    <style>
-        body {
-            background-color: black;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            height: 100vh;
-        }
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
+	<!--meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"-->
+	<meta name="viewport"
+		content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+	<meta name="mobile-web-app-capable" content="yes">
+	<title>HOLO</title>
+	<style>
+		body {
+			background-color: black;
+			margin: 0;
+			display: flex;
+			justify-content: center;
+			height: 100vh;
+		}
 
-        video {
-            transform: rotate(45deg);
-        }
-    </style>
+		video {
+			transform: rotate(45deg);
+		}
+	</style>
 </head>
 
 <body>
-    <video id="videoElement" width="570px" autoplay loop muted>
-        <source src="video.mp4" type="video/mp4" />
-    </video>
-    <!--button id="goFS">Go Fullscreen</button-->
-    <script>
-        var goFS = document.getElementById("goFS");
-        goFS.addEventListener("click", function () {
-            var videoElement = document.getElementById("videoElement");
-            videoElement.requestFullscreen();
-        }, false);
-    </script>
+	<video id="videoElement" width="484px" autoplay loop muted playsinline>
+		<source src="video.mp4" type="video/mp4" />
+	</video>
+	<!--button id="goFS">Go Fullscreen</button-->
+	<script>
+		var goFS = document.getElementById("goFS");
+		goFS.addEventListener("click", function () {
+			var videoElement = document.getElementById("videoElement");
+			videoElement.requestFullscreen();
+		}, false);
+	</script>
 </body>
 
 </html>
